[package]
name = "toolbox_link_escape"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tle_server"
path = "src/server.rs"

[[bin]]
name = "tle_client"
path = "src/client.rs"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
anyhow = "1.0.71"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
